[gd_scene load_steps=6 format=3 uid="uid://c4gjqkiwhh6t0"]

[ext_resource type="Script" path="res://addons/octahedral_impostors/scripts/impostor_queue_window.gd" id="1"]
[ext_resource type="PackedScene" path="res://addons/octahedral_impostors/scenes/exporter.tscn" id="3"]
[ext_resource type="Script" path="res://addons/octahedral_impostors/scripts/baking/baker.gd" id="4"]
[ext_resource type="PackedScene" path="res://addons/octahedral_impostors/scenes/dilatate_pipeline.tscn" id="5"]

[sub_resource type="QuadMesh" id="8"]
size = Vector2(2, 2)

[node name="QueueWindow" type="Window"]
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QueuedScenes" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/QueuedScenes"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/QueuedScenes/MarginContainer"]
layout_mode = 2
text = "Please select all OctaImpostor nodes to bake."

[node name="Panel" type="Panel" parent="VBoxContainer/TabContainer/QueuedScenes"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QueuedScenes" type="Tree" parent="VBoxContainer/TabContainer/QueuedScenes/Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
hide_root = true

[node name="Settings" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Settings/HBoxContainer"]
layout_mode = 2
text = "Save directory"

[node name="DirectoryPathEdit" type="LineEdit" parent="VBoxContainer/TabContainer/Settings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
caret_blink = true

[node name="DirectorySelectButton" type="Button" parent="VBoxContainer/TabContainer/Settings/HBoxContainer"]
layout_mode = 2
text = "..."

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/TabContainer/Settings"]
layout_mode = 2
columns = 2

[node name="OverwriteProfileCheckbox" type="CheckBox" parent="VBoxContainer/TabContainer/Settings/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Overwrite Profile"

[node name="ProfileOptionButton" type="OptionButton" parent="VBoxContainer/TabContainer/Settings/GridContainer"]
layout_mode = 2

[node name="OverwriteResolutionCheckbox" type="CheckBox" parent="VBoxContainer/TabContainer/Settings/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Overwrite Resolution"

[node name="ResolutionOptionButton" type="OptionButton" parent="VBoxContainer/TabContainer/Settings/GridContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="GridContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/GridContainer/HBoxContainer"]
layout_mode = 2
text = "Progress"

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/PanelContainer/MarginContainer/GridContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/GridContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GenerateButton" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/GridContainer/HBoxContainer2"]
layout_mode = 2
text = "Generate"
expand_icon = true

[node name="DirectorySelectDialog" type="FileDialog" parent="."]
mode = 2

[node name="InfoDialog" type="Window" parent="."]

[node name="ConfirmationBakeDialog" type="ConfirmationDialog" parent="."]
dialog_text = "Old baking content of the selected nodes will be removed. Are you sure you want to continue?"

[node name="ViewportBaking" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
debug_draw = 1
size = Vector2i(2048, 2048)
render_target_update_mode = 3

[node name="BakedContainer" type="Node3D" parent="ViewportBaking"]

[node name="PostProcess" type="MeshInstance3D" parent="ViewportBaking"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.45593)
visible = false
cast_shadow = 0
extra_cull_margin = 16384.0
mesh = SubResource("8")

[node name="BakerScript" type="Node3D" parent="."]
script = ExtResource("4")

[node name="Exporter" parent="BakerScript" instance=ExtResource("3")]

[node name="DilatatePipeline" parent="BakerScript" instance=ExtResource("5")]

[connection signal="pressed" from="VBoxContainer/TabContainer/Settings/HBoxContainer/DirectorySelectButton" to="." method="_on_DirectorySelectButton_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/GridContainer/HBoxContainer2/GenerateButton" to="." method="_on_GenerateButton_pressed"]
[connection signal="dir_selected" from="DirectorySelectDialog" to="." method="_on_DirectorySelectDialog_dir_selected"]
[connection signal="confirmed" from="ConfirmationBakeDialog" to="." method="_on_ConfirmationBakeDialog_confirmed"]
